--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,59 +1,62 @@
-application.title=SMSLib_v3
-application.vendor=Lenovo Ultra rapide
-endorsed.classpath=
-#Tue Feb 27 18:29:56 WAT 2024
-excludes=
-file.reference.commons-net-2.0.jar=lib/commons-net-2.0.jar
-file.reference.jsmpp-2.2.1.jar=lib/jsmpp-2.2.1.jar
-file.reference.lib-CopyLibs=lib/CopyLibs
-file.reference.lib-hamcrest=lib/hamcrest
-file.reference.lib-junit_4=lib/junit_4
+#Thu Feb 29 17:46:23 WET 2024
+javadoc.splitindex=true
+build.classes.excludes=**/*.java,**/*.form
 file.reference.log4j-1.2.17.jar=lib/log4j-1.2.17.jar
-file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
-javac.test.classpath=\
-    ${javac.classpath}:\
-    ${build.classes.dir}:\
-    ${libs.junit.classpath}:\
-    ${libs.junit_4.classpath}:\
-    ${libs.hamcrest.classpath}
+javadoc.author=false
+build.sysclasspath=ignore
+dist.jlink.dir=${dist.dir}/jlink
+file.reference.src-test=src/test
+buildfile=nbbuild.xml
+javac.target=1.7
+dist.jlink.output=${dist.jlink.dir}/SMSLib_v3
+build.generated.dir=${build.dir}/generated
+debug.test.modulepath=${run.test.modulepath}
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
-javac.processorpath=\
-    ${javac.classpath}
-dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.jsmpp-2.2.1.jar=lib/jsmpp-2.2.1.jar
+run.test.modulepath=\
+    ${javac.test.modulepath}
+debug.test.classpath=${run.test.classpath}
+javac.processormodulepath=
+build.dir=build
+javac.deprecation=false
+jlink.additionalparam=
+javadoc.html5=false
 test.src.dir=${file.reference.src-test}
+junit.selected.version=3
+includes=**
+application.vendor=Lenovo Ultra rapide
+mkdist.disabled=false
+jar.compress=false
+annotation.processing.processors.list=
+javac.external.vm=true
+javadoc.version=false
+build.classes.dir=${build.dir}/classes
+dist.dir=dist
+manifest.file=manifest.mf
+javac.source=1.7
+run.jvmargs=
+javac.test.processorpath=${javac.test.classpath}
+dist.archive.excludes=
+run.test.classpath=\
+    ${javac.test.classpath}:\
+    ${build.test.classes.dir}
+build.generated.sources.dir=${build.dir}/generated-sources
+javadoc.notree=false
+dist.jar=${dist.dir}/SMSLib_v3.jar
 run.modulepath=\
     ${javac.modulepath}
-annotation.processing.enabled=true
-build.sysclasspath=ignore
-debug.modulepath=${run.modulepath}
-javac.compilerargs=
-javadoc.noindex=false
-javadoc.private=false
-javadoc.author=false
-main.class=
-junit.selected.version=4
-source.encoding=UTF-8
-javac.source=1.8
-includes=**
-javadoc.use=true
-jar.compress=false
-javadoc.nonavbar=false
-annotation.processing.enabled.in.editor=false
-javadoc.notree=false
-annotation.processing.processors.list=
-javac.deprecation=false
 jlink.launcher=true
+platform.active=JDK_1.7
+annotation.processing.enabled=true
+file.reference.lib-hamcrest=lib/hamcrest
+debug.modulepath=${run.modulepath}
+main.class=
+dist.javadoc.dir=${dist.dir}/javadoc
+file.reference.src-java=src/java
+file.reference.RXTXcomm.jar=lib/RXTXcomm.jar
 javadoc.additionalparam=
-jlink.launcher.name=SMSLib_v3
-build.generated.sources.dir=${build.dir}/generated-sources
-javadoc.splitindex=true
-javac.processormodulepath=
-run.jvmargs=
-jlink.additionalmodules=
-javadoc.encoding=${source.encoding}
-file.reference.src-test=src/test
 javac.classpath=\
     ${file.reference.lib-CopyLibs}:\
     ${file.reference.RXTXcomm.jar}:\
@@ -62,41 +65,37 @@ javac.classpath=\
     ${file.reference.jsmpp-2.2.1.jar}:\
     ${file.reference.lib-junit_4}:\
     ${file.reference.log4j-1.2.17.jar}
-mkdist.disabled=false
-run.test.modulepath=\
-    ${javac.test.modulepath}
-build.classes.excludes=**/*.java,**/*.form
-dist.jlink.dir=${dist.dir}/jlink
-dist.jar=${dist.dir}/SMSLib_v3.jar
-build.classes.dir=${build.dir}/classes
-debug.test.modulepath=${run.test.modulepath}
+javadoc.noindex=false
+annotation.processing.enabled.in.editor=false
+javadoc.private=false
+javadoc.encoding=${source.encoding}
 build.test.classes.dir=${build.dir}/test/classes
-javadoc.windowtitle=
-build.test.results.dir=${build.dir}/test/results
-dist.dir=dist
-build.dir=build
-dist.archive.excludes=
-annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
-build.generated.dir=${build.dir}/generated
-javadoc.version=false
-buildfile=nbbuild.xml
+file.reference.lib-CopyLibs=lib/CopyLibs
+javac.compilerargs=
+source.encoding=UTF-8
+jlink.additionalmodules=
+meta.inf.dir=${src.dir}/META-INF
+annotation.processing.run.all.processors=true
+excludes=
+application.title=SMSLib_v3
 javac.test.modulepath=\
     ${javac.modulepath}
-debug.test.classpath=${run.test.classpath}
-javac.external.vm=true
-file.reference.src-java=src/java
-javac.target=1.8
-platform.active=JDK_1.8
-manifest.file=manifest.mf
-javadoc.html5=false
-javac.test.processorpath=${javac.test.classpath}
-meta.inf.dir=${src.dir}/META-INF
-run.test.classpath=\
-    ${javac.test.classpath}:\
-    ${build.test.classes.dir}
-dist.jlink.output=${dist.jlink.dir}/SMSLib_v3
-annotation.processing.run.all.processors=true
 javac.modulepath=
+file.reference.commons-net-2.0.jar=lib/commons-net-2.0.jar
+jlink.launcher.name=SMSLib_v3
+javac.processorpath=\
+    ${javac.classpath}
+build.test.results.dir=${build.dir}/test/results
+endorsed.classpath=
+javadoc.use=true
+file.reference.lib-junit_4=lib/junit_4
+javadoc.nonavbar=false
+javadoc.windowtitle=
+javac.test.classpath=\
+    ${javac.classpath}:\
+    ${build.classes.dir}:\
+    ${libs.junit_4.classpath}:\
+    ${libs.hamcrest.classpath}
 src.dir=${file.reference.src-java}
-jlink.additionalparam=
+annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
 debug.classpath=${run.classpath}
